<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WearInstaller</string>
    <string name="installing">Installing…</string>
    <string name="install">Install</string>
    <string name="parse_apk_failed">Cannot parse apk file :%s</string>
    <string name="parsing">Parsing…</string>
    <string name="settings">Settings</string>
    <string name="install_failed">%s install failed</string>
    <string name="apk_installed">%s has been installed</string>
    <string name="start_install">Start install %s</string>
    <string name="info_apk_path">APK PATH : </string>
    <string name="info_app_name">APP NAME : </string>
    <string name="info_pkg_name">PKG NAME : </string>
    <string name="info_installed_version">CUR VER : </string>
    <string name="install_successful">Install Success</string>
    <string name="install_failed_msg">Install Failed</string>
    <string name="install_silently">Silently</string>
    <string name="back_track">Back</string>
    <string name="unable_install_apk">Unable to install app</string>
    <string name="open_installed_app">Open</string>
    <string name="auto_delete_apk">Auto Delete APK</string>
    <string name="auto_del_apk_title">Auto delete</string>
    <string name="auto_del_notification">%s (apk file has been deleted)</string>
    <string name="apk_deleted">%s has been delete</string>
    <string name="app_permissions">APP PERM : (%s)</string>
    <string name="title_show_perm">App Permissions</string>
    <string name="summary_show_perm">Show app permissions list</string>
    <string name="apk_activity">APP ACT : (%s)</string>
    <string name="title_show_activity">App Activity</string>
    <string name="summary_show_activity">Show app activity list</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_title_tip">Tip</string>
    <string name="text_install_complete">Complete</string>
    <string name="clean_complete">Clean complete</string>
    <string name="no_permissions">No Permissions</string>
    <string name="text_hint_input_pkg">Please enter package name</string>
    <string name="text_title_input">Input</string>
    <string name="text_input_empty">Input content is empty</string>
    <string name="dialog_no_longer_prompt">No longer prompt</string>
    <string name="apk_uninstall">Uninstall</string>
    <string name="low_version_tip">The old version is being installed, and some devices do not support downgrade installation, which may cause the installation to fail!</string>
    <string name="apk_low_version">Low Version</string>
    <string name="apk_new_version">New Version</string>
    <string name="apk_equal_version">Same Version</string>
    <string name="text_apk_source">Source:%s</string>
    <string name="text_apk_file_size">File Size : %s</string>
    <string name="text_apk_source_more">Click to view details</string>
    <string name="text_apk_cache">APK Installation package cache size:%s\nClick please</string>
    <string name="text_cancel_installation">Cancel</string>
    <string name="text_settings_version">Version: %S</string>
    <string name="text_settings_author">Author: ISNing</string>
    <string name="text_no_description">No corresponding description</string>
    <string name="text_uninstall">Uninstall - %s Mode</string>
    <string name="text_confirm_uninstall_app">Are you sure you want to uninstall %s?</string>
    <string name="text_uninstall_complete">%s Uninstall complete!</string>
    <string name="text_uninstall_failure">Uninstall failed!</string>
    <string name="follow_system_night_mode">Auto dark</string>
    <string name="follow_system_night_mode_sub">Follow the system night mode</string>
    <string name="install_mode">Installation mode</string>
    <string name="install_mode_sub">Choose installation mode</string>
    <string name="exit_app">Exit</string>
    <string name="cannot_found_pkg">Failed to get the package name</string>
    <string name="default_silent">Silent by default</string>
    <string name="default_silent_sub">Silent installation is used by default</string>
    <string name="error_occurred_explanation">An unexpected error occurred</string>
    <string name="close_app">Close app</string>
    <string name="notification_perm">Need to open the notification permission, used for silent installation, notify the installation status</string>
    <string name="error_details">Error log</string>
    <string name="error_details_copy">Copy log</string>
    <string name="copy_error_log">Copied to clipboard</string>
    <string name="use_app_warn">Software operation requires storage read and write permissions, Android11 additionally requires access to all files and Android/data access permissions,
         Please give permission. If the installation fails, please try to close the GooglePlay security scan, customize the systems USB ADB installation monitoring, etc. At the same time, it is strongly not recommended that you uninstall or disable the system installer, which is very dangerous.</string>
    <string name="open_sys_pkg_failure">Open failed! Try to customize the package name in the settings</string>
</resources>
