<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">
        <requestFocus/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/settings"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/info_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DB4437"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_settings_author"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_settings_version"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_card"
                android:layout_margin="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorCard"
                app:cardElevation="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadingEdge="none"
                    android:overScrollMode="never" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_apk_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_settings"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorCard"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_apk_cache"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_apk_cache"
                        android:textColor="@color/colorTextSub" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>
